4/loops/marked.txt
Found the correct construct!
Building algo1-for.c 
gcc -Wall algo1-for.c
OK!
1c1
< 55 5.0
---
> Enter number for sumation and hence the mean: 55 5.0
x  x != x 55 5.0 x
Result is unexpected (1 marks)
Found the correct construct!
Building algo1-while.c 
gcc -Wall algo1-while.c
OK!
Result OK
Found the correct construct!
Building algo1-goto.c 
gcc -Wall algo1-goto.c
algo1-goto.c: In function 'main':
algo1-goto.c:11:8: warning: suggest parentheses around comparison in operand of '&' [-Wparentheses]
   if(n > 0 & n < 11) // if loop tells the compiler to implement the function if whatever integer is typed in n falls between 0 and 10.
      ~~^~~
OK!
Result OK
Building algo1-recursive.c 
gcc -Wall algo1-recursive.c
algo1-recursive.c: In function 'main':
algo1-recursive.c:13:9: warning: unused variable 'm' [-Wunused-variable]
   float m = arg/2; // float m assigned as integer arg divided by 2.
         ^
OK!
1c1
< 45 4.5
---
> 0 4.5
x  x != x 45 4.5 x
Result is unexpected (2 marks)
Found the correct construct!
Building algo2-for.c 
gcc -Wall algo2-for.c
OK!
1c1
< no palindrome
---
> Please input word(s) to determine if it is a palindrome:  is a palindrome.
\ No newline at end of file
x  x != x no palindrome x
Result is unexpected (1 marks)
Found the correct construct!
Building algo2-while.c 
gcc -Wall algo2-while.c
OK!
1c1
< palindrome
---
> Please input word(s) to determine if it is a palindrome: öoÑñU is not palindrome
x  x != x palindrome x
Result is unexpected (1 marks)
Found the correct construct!
Building algo2-goto.c 
gcc -Wall algo2-goto.c
algo2-goto.c: In function 'main':
algo2-goto.c:13:11: warning: statement with no effect [-Wunused-value]
   (str[i] != str[n-i-1]); // Determines if string array of i is not equal to the string array of strlen(str) - i - 1.
   ~~~~~~~~^~~~~~~~~~~~~~
algo2-goto.c:15:19: error: expected expression before '.' token
     pldrm = false;./
                   ^
Error building the program (2 marks)
Building algo2-recursive.c 
gcc -Wall algo2-recursive.c
OK!
1c1
< no palindrome
---
> Please input a word to determine if it is a palindrome: Sorry, the word you have inputted is not a palindrome!/n
\ No newline at end of file
x  x != x no palindrome x
Result is unexpected (2 marks)
3/12 marks
